# uc3m_tfg_pinn_based_approaches_to_high_dimensional_problems

./: .dockerignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  install.bat  mypy.ini  readme_1.md  ruff.toml  setup.cfg  tasks.md  tox.ini
docs/: Makefile  make.bat
docs/source/: about.md  bibliography.md  conf.py  index.rst  theory_template_1.md
docs/source/_autoapi_templates/: index.rst
docs/source/_static/css/: custom.css  highlight.css
docs/source/examples/: ex1_title_of_example.md  index.rst
requirements/: dev.txt  docs.txt  required.txt  tests.txt
src/tfg/: __init__.py
src/tfg/nn/: cos.py  dx.py  high_dimension.py  models.py  paraboloid.py
src/tfg/nn/models/: ode1.py  ode2.py
