[metadata]
name = template_project_name
version = 0.0.1
author = Author
author_email = author_email
description = description  
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LuisGMM/Template
project_urls =
    Bug Tracker = https://github.com/LuisGMM/Template/issues
classifiers =
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = 
    template_project_name
install_requires =
    numpy >= 1.21.5
python_requires = >=3.11
package_dir =
    = src
zip_safe = no

[options.extras_require]
tests =
    pytest
    pytest-cov
    mypy
    flake8
    isort
docs =
    myst_nb
    pydata-sphinx-theme
    sphinx
    sphinx-autoapi
    sphinx-notfound-page

[options.package_data]
template_project_name = py.typed

[flake8]
max-line-length = 112
max-complexity = 9
exclude = temp_checks

[mypy]
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
python_version = 3.11

[tool:pytest]
testpaths =
    tests
addopts = --cov
norecursedirs =
    docs
